CloudApiGatewayApplication /k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-api-gateway
  template:
    metadata:
      labels:
        app: cloud-api-gateway
    spec:
      serviceAccountName: cloud-api-gateway-sa
      containers:
        - name: cloud-api-gateway
          image: cloud-api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
            - name: token-volume
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: gateway-config
        - name: token-volume
          projected:
            sources:
            - serviceAccountToken:
                expirationSeconds: 3600
                path: token
