CloudApiGatewayApplication /k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-api-gateway
spec:
  type: NodePort
  selector:
    app: cloud-api-gateway
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
